@@ -65,6 +65,7 @@ import ch.ivyteam.ivy.workflow.ITask;
 public class DashboardBean implements Serializable {
 
   private static final long serialVersionUID = -4224901891867040688L;
+  private static final String ACCESSIBILITY_DASHBOARD_TEMPLATE_ID = "accessibility-dashboard-template";
 
   protected List<Dashboard> dashboards;
   protected Dashboard selectedDashboard;
@@ -501,7 +502,7 @@ public class DashboardBean implements Serializable {
   }
 
   public String getSelectedDashboardName() {
-    if (selectedDashboardName.isBlank()) {
+    if (StringUtils.isBlank(selectedDashboardName)) {
       return Ivy.cms().co("/ch.ivy.addon.portalkit.ui.jsf/common/dashboard");
     }
     return selectedDashboardName;
@@ -512,7 +513,7 @@ public class DashboardBean implements Serializable {
   }
 
   public String getScreenReaderNotificationContent() {
-    if (this.selectedDashboard.isAccessibility()) {
+    if (this.selectedDashboard != null && ACCESSIBILITY_DASHBOARD_TEMPLATE_ID.equals(this.selectedDashboard.getTemplateId())) {
       return Ivy.cms().co("/Dialogs/com/axonivy/portal/dashboard/component/AccessibilityShortcuts/title");
     }
     return StringUtils.EMPTY;
